--- a/package.json
+++ b/package.json
@@ -17,17 +17,23 @@
     "@types/errorhandler": "^1.5.0",
     "@types/express": "^4.17.6",
     "@types/helmet": "^0.0.46",
+    "@types/jest": "^25.2.1",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/morgan": "^1.9.0",
     "@types/mysql": "^2.15.10",
     "@types/node": "^13.13.5",
+    "@types/supertest": "^2.0.9",
     "errorhandler": "^1.5.1",
+    "jest": "^26.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
+    "supertest": "^4.0.2",
+    "ts-jest": "^25.5.0",
     "ts-node": "^8.10.1",
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "ts-node src/server.ts"
+    "start": "ts-node src/server.ts",
+    "test": "jest"
   }
 }
