--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start": "nodemon src/server.ts",
     "startAuth": "ts-node authServer/authServer.ts",
     "test": "jest --detectOpenHandles"
   }
