--- a/server/package.json
+++ b/server/package.json
@@ -19,24 +19,37 @@
     "@types/errorhandler": "^1.5.0",
     "@types/express": "^4.17.6",
     "@types/helmet": "^0.0.46",
-    "@types/jest": "^25.2.1",
+    "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/morgan": "^1.9.0",
     "@types/mysql": "^2.15.10",
     "@types/node": "^13.13.5",
+    "@types/superagent": "^4.1.7",
     "@types/supertest": "^2.0.9",
     "errorhandler": "^1.5.1",
-    "jest": "25.0.0",
+    "jest": "26.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
+    "superagent": "^5.2.2",
     "supertest": "^4.0.2",
-    "ts-jest": "^25.5.0",
+    "ts-jest": "^26.0.0",
     "ts-node": "^8.10.1",
     "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "nodemon src/server.ts",
     "startAuth": "ts-node authServer/authServer.ts",
-    "test": "jest --detectOpenHandles"
+    "test": "jest --detectOpenHandles --watch"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@App/(.*)$": "<rootDir>/src/$1",
+      "^lib/(.*)$": "<rootDir>/common/$1"
+    },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
