--- a/server/package.json
+++ b/server/package.json
@@ -1,55 +1,60 @@
 {
-  "name": "orga",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^3.22.0",
-    "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.24"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/dotenv": "^8.2.0",
-    "@types/errorhandler": "^1.5.0",
-    "@types/express": "^4.17.6",
-    "@types/helmet": "^0.0.46",
-    "@types/jest": "^25.2.3",
-    "@types/jsonwebtoken": "^8.3.9",
-    "@types/morgan": "^1.9.0",
-    "@types/mysql": "^2.15.13",
-    "@types/node": "^13.13.5",
-    "@types/superagent": "^4.1.7",
-    "@types/supertest": "^2.0.9",
-    "errorhandler": "^1.5.1",
-    "jest": "26.0.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.3",
-    "superagent": "^5.2.2",
-    "supertest": "^4.0.2",
-    "ts-jest": "^26.0.0",
-    "ts-node": "^8.10.1",
-    "typescript": "^3.8.3"
-  },
-  "scripts": {
-    "start": "nodemon src/server.ts",
-    "startAuth": "ts-node authServer/authServer.ts",
-    "test": "jest --detectOpenHandles --watch"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "moduleNameMapper": {
-      "^@App/(.*)$": "<rootDir>/src/$1",
-      "^lib/(.*)$": "<rootDir>/common/$1"
-    },
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
-  }
+	"name": "orga",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"dependencies": {
+		"@types/bcrypt": "^3.0.0",
+		"@types/mongoose": "^5.7.23",
+		"bcrypt": "^5.0.0",
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"helmet": "^3.22.0",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^5.9.18",
+		"mysql": "^2.18.1",
+		"reflect-metadata": "^0.1.13",
+		"typeorm": "^0.2.24"
+	},
+	"devDependencies": {
+		"@types/cors": "^2.8.6",
+		"@types/dotenv": "^8.2.0",
+		"@types/errorhandler": "^1.5.0",
+		"@types/express": "^4.17.6",
+		"@types/helmet": "^0.0.46",
+		"@types/jest": "^25.2.3",
+		"@types/jsonwebtoken": "^8.3.9",
+		"@types/morgan": "^1.9.0",
+		"@types/mysql": "^2.15.13",
+		"@types/node": "^13.13.5",
+		"@types/superagent": "^4.1.7",
+		"@types/supertest": "^2.0.9",
+		"errorhandler": "^1.5.1",
+		"jest": "26.0.0",
+		"morgan": "^1.10.0",
+		"nodemon": "^2.0.3",
+		"superagent": "^5.2.2",
+		"supertest": "^4.0.2",
+		"ts-jest": "^26.0.0",
+		"ts-node": "^8.10.1",
+		"typescript": "^3.8.3"
+	},
+	"scripts": {
+		"start": "nodemon src/server.ts",
+		"auth": "ts-node authServer/auth.app.ts",
+		"test": "jest --detectOpenHandles --watch"
+	},
+	"jest": {
+		"preset": "ts-jest",
+		"testEnvironment": "node",
+		"moduleNameMapper": {
+			"^@App/(.*)$": "<rootDir>/src/$1",
+			"^lib/(.*)$": "<rootDir>/common/$1"
+		},
+		"coveragePathIgnorePatterns": [
+			"/node_modules/"
+		]
+	}
 }
